src/test/ui/type-check-defaults.stderr
error[E0277]: the trait bound `i32: std::iter::FromIterator<i32>` is not satisfied
  --> $DIR/type-check-defaults.rs:16:19
   |
16 | struct WellFormed<Z = Foo<i32, i32>>(Z);
   |                   ^ a collection of type `i32` cannot be built from an iterator over elements of type `i32`
   |
   = help: the trait `std::iter::FromIterator<i32>` is not implemented for `i32`
note: required by `Foo`
  --> $DIR/type-check-defaults.rs:15:1
   |
15 | struct Foo<T, U: FromIterator<T>>(T, U);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `i32: std::iter::FromIterator<i32>` is not satisfied
  --> $DIR/type-check-defaults.rs:18:27
   |
18 | struct WellFormedNoBounds<Z:?Sized = Foo<i32, i32>>(Z);
   |                           ^ a collection of type `i32` cannot be built from an iterator over elements of type `i32`
   |
   = help: the trait `std::iter::FromIterator<i32>` is not implemented for `i32`
note: required by `Foo`
  --> $DIR/type-check-defaults.rs:15:1
   |
15 | struct Foo<T, U: FromIterator<T>>(T, U);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `A: std::iter::Iterator` is not satisfied
  --> $DIR/type-check-defaults.rs:21:1
   |
21 | struct WellFormedProjection<A, T=<A as Iterator>::Item>(A, T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `A` is not an iterator; maybe try calling `.iter()` or a similar method
   |
   = help: the trait `std::iter::Iterator` is not implemented for `A`
   = help: consider adding a `where A: std::iter::Iterator` bound

error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:24:1
   |
24 | struct Bounds<T:Copy=String>(T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:27:1
   |
27 | struct WhereClause<T=String>(T) where T: Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:30:1
   |
30 | trait TraitBound<T:Copy=String> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `Self: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:33:1
   |
33 | trait SelfBound<T:Copy=Self> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `Self`
   |
   = help: consider adding a `where Self: std::marker::Copy` bound
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:37:1
   |
37 | trait Base<T = String>: Super<T> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
note: required by `Super`
  --> $DIR/type-check-defaults.rs:36:1
   |
36 | trait Super<T: Copy> { }
   | ^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `i32: std::ops::Add<u8>` is not satisfied
  --> $DIR/type-check-defaults.rs:40:1
   |
40 | trait ProjectionPred<T:Iterator = IntoIter<i32>> where T::Item : Add<u8> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `i32 + u8`
   |
   = help: the trait `std::ops::Add<u8>` is not implemented for `i32`
   = note: required by `std::ops::Add`

error[E0277]: the trait bound `u32: Bar<i32>` is not satisfied
  --> $DIR/type-check-defaults.rs:44:1
   |
44 | struct TwoParams<T = u32, U = i32>(T, U) where T: Bar<U>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar<i32>` is not implemented for `u32`
   |
   = help: the following implementations were found:
             <u32 as Bar<std::string::String>>
note: required by `Bar`
  --> $DIR/type-check-defaults.rs:46:1
   |
46 | trait Bar<V> {}
   | ^^^^^^^^^^^^

error: aborting due to 10 previous errors

